--- a/build.gradle
+++ b/build.gradle
@@ -12,26 +12,17 @@ buildscript {
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-//
     }
 }
 
 apply plugin: 'forge'
 
-version = "1.2.0-1.7.10"
+version = "1.2.0"
 group = "dk.mrspring" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ToggleBlocks"
-ext.configFile = file "build.properties"
-
-configFile.withReader {
-    // Load config.  It shall from now be referenced as simply config or project.config
-    def prop = new Properties()
-    prop.load(it)
-    project.ext.config = new ConfigSlurper().parse prop
-}
 
 minecraft {
-    version = "1.7.10-10.13.4.1492-1.7.10"
+    version = "1.7.10-10.13.4.1517-1.7.10"
     runDir = "eclipse"
 }
 
@@ -40,23 +31,12 @@ repositories {
         name "chickenbones"
         url "http://chickenbones.net/maven/"
     }
-    maven {
-        name "mobius"
-        url "http://mobiusstrip.eu/maven/"
-    }
-}
-
-configurations {
-    deployerJars
 }
 
 dependencies {
     compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
     compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
     compile "codechicken:NotEnoughItems:1.7.10-1.0.5.118:dev"
-    compile "mcp.mobius.waila:Waila:1.5.10_1.7.10"
-	
-    deployerJars "org.apache.maven.wagon:wagon-ftp:2.10"
 }
 
 processResources
@@ -79,31 +59,22 @@ processResources
             }
         }
 
-sourceSets {
-    api {
-        java {
-            srcDir "$projectDir"
-            include "src/api/java"
-        }
-    }
-}
-
 jar() {
     from(sourceSets.main.output, sourceSets.api.output)
 }
 
 task sourceJar(type: Jar) {
-    from(sourceSets.main.java, sourceSets.api.output)
+    from(sourceSets.main.java, sourceSets.api.java)
     classifier = "src"
 }
 
 task devJar(type: Jar) {
-    from (sourceSets.main.output, sourceSets.api.output)
+    from(sourceSets.main.output, sourceSets.api.output)
     classifier = "deobf"
 }
 
 task apiJar(type: Jar) {
-    from (sourceSets.api.output)
+    from(sourceSets.api.output)
     classifier = "api"
 }
 
@@ -111,20 +82,4 @@ artifacts {
     archives sourceJar, devJar, apiJar
 }
 
-uploadArchives {
-    dependsOn "reobf"
-    repositories {
-        mavenDeployer {
-            configuration = configurations.deployerJars
-            repository(url: "${config.maven_url}") {
-                authentication(userName: "${config.maven_user}", password: "${config.maven_pass}")
-            }
-        }
-    }
-}
-
-idea {
-    module {
-        inheritOutputDirs = true
-    }
-}
+idea { module { inheritOutputDirs = true } }
