--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,17 @@ repositories {
         name "chickenbones"
         url "http://chickenbones.net/maven/"
     }
+    maven {
+        name "mobius"
+        url "http://mobiusstrip.eu/maven/"
+    }
 }
 
 dependencies {
     compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
     compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
     compile "codechicken:NotEnoughItems:1.7.10-1.0.5.118:dev"
+    compile "mcp.mobius.waila:Waila:1.5.10_1.7.10"
 }
 
 processResources
