--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ archivesBaseName = "ToggleBlocks"
 minecraft {
     version = "1.7.10-10.13.4.1517-1.7.10"
     runDir = "eclipse"
+    replace '${version}', project.version;
 }
 
 repositories {
