--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,24 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.2.0"
+String mc_version = "1.7.10"
+String mod_version = "1.2.0"
+version = "${mod_version}-${mc_version}"
 group = "dk.mrspring" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ToggleBlocks"
+ext.configFile = file "build.properties"
+
+configFile.withReader {
+    // Load config.  It shall from now be referenced as simply config or project.config
+    def prop = new Properties()
+    prop.load(it)
+    project.ext.config = new ConfigSlurper().parse prop
+}
 
 minecraft {
     version = "1.7.10-10.13.4.1517-1.7.10"
     runDir = "eclipse"
-    replace '${version}', project.version;
+    replace '${version}', mod_version;
 }
 
 repositories {
@@ -48,7 +58,7 @@ dependencies {
 processResources
         {
             // this will ensure that this task is redone when the versions change.
-            inputs.property "version", project.version
+            inputs.property "version", mod_version
             inputs.property "mcversion", project.minecraft.version
 
             // replace stuff in mcmod.info, nothing else
@@ -86,6 +96,26 @@ task apiJar(type: Jar) {
 
 artifacts {
     archives sourceJar, devJar, apiJar
+}
+
+configurations {
+    deployerJars
+}
+
+dependencies {
+    deployerJars "org.apache.maven.wagon:wagon-ftp:2.10"
+}
+
+uploadArchives {
+    dependsOn "reobf"
+    repositories {
+        mavenDeployer {
+            configuration = configurations.deployerJars
+            repository(url: "${config.maven_url}") {
+                authentication(userName: "${config.maven_user}", password: "${config.maven_pass}")
+            }
+        }
+    }
 }
 
 idea { module { inheritOutputDirs = true } }
