--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ String mod_version = "1.2.2"
 version = "${mod_version}-${mc_version}"
 if (System.getenv("GIT_COMMIT"))
     version += "-${System.getenv("GIT_COMMIT").take(7)}";
+if (System.getenv("DRONE_BUILD_NUMBER"))
+    version += "-${System.getenv("DRONE_BUILD_NUMBER")}";
 group = "dk.mrspring" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ToggleBlocks"
 ext.configFile = file "build.properties"
