--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,8 @@ task buildInfo << {
             branch: branch,
             mod_version: mod_version,
             mc_version: mc_version));
-    File infoFile = new File("libs", "${archivesBaseName}-${project.version}.json")
+    File infoFile = new File("build/libs/${archivesBaseName}-${project.version}.json")
+    println(infoFile.toString());
     infoFile.createNewFile()
     infoFile.setText(jsonCode)
 }
