--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,20 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+
+String mc_version = "1.8.8"
+String mod_version = "1.2.3"
+boolean isDrone = System.getenv("DRONE") == "true";
+version = "${mod_version}-${mc_version}"
+String commit, buildNumber, branch;
+if (isDrone) {
+    commit = System.getenv("DRONE_COMMIT").take(7)
+    buildNumber = System.getenv("DRONE_BUILD_NUMBER")
+    branch = System.getenv("DRONE_BRANCH")
+    version += "-${commit}-${buildNumber}-${branch}"
+}
+group = "dk.mrspring" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "ToggleBlocks"
 
 minecraft {
     version = "1.8.8-11.15.0.1618-1.8.8"
@@ -59,6 +70,56 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+}
+
+jar() {
+    from(sourceSets.main.output, sourceSets.api.output)
+}
+
+task sourceJar(type: Jar) {
+    from(sourceSets.main.java, sourceSets.api.java)
+    classifier = "src"
+}
+
+task devJar(type: Jar) {
+    from(sourceSets.main.output, sourceSets.api.output)
+    classifier = "deobf"
+}
+
+task apiJar(type: Jar) {
+    from(sourceSets.api.output)
+    classifier = "api"
+}
+
+artifacts {
+    archives sourceJar, devJar, apiJar
+}
+
+import groovy.json.JsonOutput
+
+task buildInfo << {
+    String jsonCode = JsonOutput.toJson(new BuildInformation(
+            commit: commit,
+            build_number: Integer.valueOf(buildNumber),
+            branch: branch,
+            mod_version: mod_version,
+            mc_version: mc_version,
+            commit_full: System.getenv("DRONE_COMMIT"),
+            build_time: System.currentTimeMillis() / 1000L,
+            files: ["api", "deobf", "src"]));
+    File infoFile = new File("build/libs/${archivesBaseName}-${project.version}.json")
+    println(infoFile.toString());
+    infoFile.createNewFile()
+    infoFile.setText(jsonCode)
+}
+buildInfo.enabled = isDrone;
+build.finalizedBy buildInfo
+
+class BuildInformation {
+    String commit, branch, mod_version, mc_version, commit_full;
+    String[] files;
+    int build_number;
+    long build_time;
 }
 
 processResources
