--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ jar() {
     from(sourceSets.main.output, sourceSets.api.output)
 }
 
-task sourceJar(type: Jar) {
+sourceJar() {
     from(sourceSets.main.java, sourceSets.api.java)
     classifier = "src"
 }
